<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trapNameEditText"
        android:layout_gravity="center_horizontal"
        android:textSize="36sp"
        android:hint="@string/trap_name"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        android:id="@+id/button3"
        android:onClick="okButtonCallback"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="81dp"
        android:layout_marginStart="81dp"
        android:layout_below="@+id/trapNameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:onClick="cancelButtonCallback"
        android:layout_marginLeft="54dp"
        android:layout_marginStart="54dp"
        android:layout_alignTop="@+id/button3"
        android:layout_toRightOf="@+id/button3"
        android:layout_toEndOf="@+id/button3" />

</RelativeLayout>